--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,7 +24,7 @@ spring:
   jpa:
     open_in_view: false
     hibernate:
-      ddl_auto: update
+      ddl_auto: create-drop
     properties:
       hibernate:
         dialect: org.hibernate.dialect.Oracle12cDialect
